[gd_scene load_steps=4 format=3 uid="uid://j13pcro7xfx3"]

[ext_resource type="PackedScene" uid="uid://sa6qbn8g8djm" path="res://scenes/start_gui.tscn" id="1_b6yrl"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_n71wy"]
[ext_resource type="PackedScene" uid="uid://bn0fro12aacxf" path="res://scenes/board_piece.tscn" id="2_6m8qv"]

[node name="Main" type="Node"]
script = ExtResource("1_n71wy")
board_piece_scene = ExtResource("2_6m8qv")

[node name="StartGUI" parent="." instance=ExtResource("1_b6yrl")]

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="start_pressed" from="StartGUI" to="." method="_on_start_gui_start_pressed"]
